--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <label><input type="checkbox" id="gazousyori">数式・図形・画像処理 (2)</label><br>
 
 <h2>一般教養科目</h2>
-英語必修・第2外国語必修(計12単位)を<b>含めずに</b>一般教養科目の履修単位数を<b>半角数字</b>で入力<br>
+英語必修・第2外国語必修(計12単位)を<b>含めない</b>一般教養科目の履修単位数を<b>半角数字</b>で入力<br>
 <input type="text" id="kyouyou"><br>
 <b>その中で</b>、3年次以降に履修した単位数を<b>半角数字</b>で入力<br>
 <input type="text" id="kyouyou3nen"><br>
@@ -156,9 +156,7 @@
 <h2>進級・卒業条件</h2>
 <div id="cond"></div>
 
-
-
-
+<button id="post">結果をXにポストする</button>
 
 
 </body>
