--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 ※一般教養科目を入力しなくても、2年次への進級条件と数学研究履修条件の判定は利用できます。<br>
 
 <h2>専門選択科目に算入する他学科科目</h2>
-専門選択科目に参入する他学科科目を履修した場合は単位数を<b>半角数字</b>で入力<br>
+専門選択科目に算入する他学科科目を履修した場合は単位数を<b>半角数字</b>で入力<br>
 <input type="text" id="tagakka"><br>
 
 <h1>実行</h1>
