--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>理学部第一部数学科 単位数チェック</title>
 
     <link rel="stylesheet" type="text/css" href="./index.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 
 <body>
@@ -135,7 +136,7 @@
 <label><input type="checkbox" id="gazousyori">数式・図形・画像処理 (2)</label><br>
 
 <h2>一般教養科目</h2>
-英語必修・第2外国語必修(計12単位)を<b>含めずに</b>一般教養科目の履修単位数を<b>半角数字</b>で入力<br>
+英語必修・第2外国語必修(計12単位)を<b>含めない</b>一般教養科目の履修単位数を<b>半角数字</b>で入力<br>
 <input type="text" id="kyouyou"><br>
 <b>その中で</b>、3年次以降に履修した単位数を<b>半角数字</b>で入力<br>
 <input type="text" id="kyouyou3nen"><br>
@@ -161,27 +162,6 @@
 
 </body>
 
-
-
 <script src="main.js"></script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </html>
