--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 </head>
 
 <body>
-    <header>理学部第一部数学科 単位数チェック</header>
+    <header>
+        理学部第一部数学科 単位数チェック
+        <div class = "version">2023年度まで入学者用</div>
+    </header>
 
+<a href="2024.html">2024年度以降入学者はこちら</a>
 
 <h1>学年を選択</h1>
 <select id="grade">
@@ -114,6 +118,8 @@
 <label><input type="checkbox" id="system">情報システム概論 (2)</label><br>
 <label><input type="checkbox" id="network">ネットワーク概論 (2)</label><br>
 <label><input type="checkbox" id="media">マルチメディア論 (2)</label><br>
+<label><input type="checkbox" id="ai">データサイエンス・AI応用基礎 (2)</label><br>
+<label><input type="checkbox" id="rigaku">現代理学特別講義 (2)</label><br>
 
 <h2>4年次標準履修科目</h2>
 <label><input type="checkbox" id="sotsuken">卒業研究 (8)</label><br>
@@ -162,6 +168,27 @@
 
 </body>
 
+
+
 <script src="main.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </html>
